# learn-actix-web

./: remove_sub_git.sh
Postman/: AW DevActivity.postman_collection.json
aw01-pengantar-actix-web/: Cargo.toml
aw02-application-builder-bagian-1/: Cargo.toml
aw03-application-builder-bagian-2/: Cargo.toml
aw04-httpserver-and-https/: Cargo.toml  cert.pem  generate_openssl.sh  key.pem
aw05-extractor-bagian-1/: Cargo.toml
aw06-extractor-bagian-2/: Cargo.toml
aw07-handlers/: Cargo.toml
aw08-error-handling/: Cargo.toml
aw09-url-dispatch-bagian-1/: Cargo.toml
aw11-request/: Cargo.toml
aw11-request/src/: lib.rs  main.rs
aw11-request/src/content_encoding/: first.sh  handler.rs  mod.rs  routes.rs  then.sh
aw11-request/src/json_request/: handler.rs  mod.rs  routes.rs
aw11-request/src/manually_load_payload/: handler.rs  mod.rs  routes.rs
aw11-request/src/streaming_request/: first.sh  handler.rs  mod.rs  routes.rs
aw19_20-database/: .env  Cargo.toml  docker-compose.yml
aw19_20-database/migrations/2023-11-13-021128_create_item/: up.sql
aw19_20-database/src/: db.rs  lib.rs  main.rs  schema.rs
aw19_20-database/src/items/: handlers.rs  mod.rs  models.rs  routes.rs
aw21_28-restful-api/: .env.example  Cargo.toml  docker-compose.yml  requirements.sh
aw21_28-restful-api/config/: development.toml  production.toml
aw21_28-restful-api/migrations/: 20231114055917_initial_setup.down.sql  20231114055917_initial_setup.up.sql  20231114061106_create_users.up.sql  20231114061836_create_followers.up.sql  20231114062750_create_article.up.sql  20231114063913_create_comments.up.sql  20231114064504_create_article_tags.up.sql
aw21_28-restful-api/src/: errors.rs  lib.rs  main.rs  server.rs  settings.rs  utils.rs
aw21_28-restful-api/src/routes/: mod.rs  ping.rs  users.rs
aw21_28-restful-api/src/schemas/: mod.rs  users_schema.rs
aw21_28-restful-api/tests/api/: main.rs  ping.rs  test_utils.rs
(+125 files in other folders)
