[package]
name = "aw19_20-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
